internal/http/www/assets/css/www.css
/**
 * SparkleMuffin
 * Copyright (c) 2022 VirtualTam <virtualtam@flibidi.net>
 * SPDX-License-Identifier: MIT
 */

@import "../node_modules/bulma/css/bulma.css";
@import "../node_modules/@fortawesome/fontawesome-free/css/all.min.css";
@import "awesomplete.css";
@import "easymde.css";

/**
 * Exo2 font family by Nathaniel Gama
 * https://github.com/NDISCOVER/Exo-2.0
 *
 * Exo2 is licensed under the SIL Open Font License, Version 1.1. This license
 * is available with a FAQ at https://scripts.sil.org/OFL
 */
@font-face {
  font-family: "exo2";
  src: url("../fonts/exo2/Exo2-VariableFont_wght.ttf");
  font-display: block;
}

/**
 * Fira Code font family by The Fira Code Project Authors
 * https://github.com/tonsky/FiraCode
 *
 * Fira Code is licensed under the SIL Open Font License, Version 1.1. This
 * license is available with a FAQ at https://scripts.sil.org/OFL
 */
@font-face {
  font-family: "firacode";
  src: url("../node_modules/firacode/distr/variable_ttf/FiraCode-VF.ttf");
  font-display: block;
}

/* Global */
html,
body,
button,
input {
  font-family: exo2, sans;
}

a:hover {
  text-decoration: underline;
}

code {
  font-family: firacode, monospace;
  font-size: 14px;
}

/* Bulma */
.content blockquote {
  font-style: italic;
}

.dropdown-menu {
  min-width: 4ch;
}

.footer .logo {
  color: var(--bulma-success-30);
}

.icon-text {
  flex-wrap: nowrap;
}

.level-left,
.level-item {
  flex-shrink: unset;
}

.menu-list li ul {
  border-inline-start: 0;
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 0;
  padding-inline-start: 0;
}

.tag a {
  color: var(--bulma-text);
}

/* Bookmarks */
.bookmark-title {
  color: var(--bulma-text);
}

.tag-count {
  display: inline-block;
  width: 4em;
}

/* Feeds */
.feed-title {
  color: var(--bulma-text);
}

